--- a/navbar.css
+++ b/navbar.css
@@ -1,14 +1,7 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    line-height: 1.6;
-}
-
 header {
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 }
 
 header nav {
@@ -120,5 +113,11 @@ header nav ul li:hover .dropdown-content {
     .header-buttons .btn {
         width: 100%;
         margin: 5px 0;
+    }
+}
+
+@media (min-width: 769px) {
+    header {
+        padding: 0vw 12vw 0vw 12vw;
     }
 }
